// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart renders a chart for a dataset of multiple words 1`] = `
<Fragment>
  <div
    className="makeStyles-chartContainer-1"
    key="bob"
  >
    <Line
      data={
        Object {
          "datasets": Array [
            Object {
              "data": Array [
                Object {
                  "word": "bob",
                },
              ],
            },
          ],
          "labels": Array [],
        }
      }
      options={
        Object {
          "maintainAspectRatio": true,
          "responsive": true,
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
    />
  </div>
  <div
    className="makeStyles-chartContainer-1"
    key="phil"
  >
    <Line
      data={
        Object {
          "datasets": Array [
            Object {
              "data": Array [
                Object {
                  "word": "phil",
                },
              ],
            },
          ],
          "labels": Array [],
        }
      }
      options={
        Object {
          "maintainAspectRatio": true,
          "responsive": true,
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
    />
  </div>
</Fragment>
`;

exports[`LineChart renders a chart for a dataset of one word 1`] = `
<Fragment>
  <div
    className="makeStyles-chartContainer-1"
    key="bob"
  >
    <Line
      data={
        Object {
          "datasets": Array [
            Object {
              "data": Array [
                Object {
                  "word": "bob",
                },
              ],
            },
          ],
          "labels": Array [],
        }
      }
      options={
        Object {
          "maintainAspectRatio": true,
          "responsive": true,
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
    />
  </div>
</Fragment>
`;

exports[`LineChart should render correctly 1`] = `
<Fragment>
  <div
    className="makeStyles-chartContainer-1"
    key="bob"
  >
    <Line
      data={
        Object {
          "datasets": Array [
            Object {
              "data": Array [
                Object {
                  "word": "bob",
                },
              ],
            },
          ],
          "labels": Array [],
        }
      }
      options={
        Object {
          "maintainAspectRatio": true,
          "responsive": true,
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
    />
  </div>
</Fragment>
`;
